# web-trading

./: CMakeLists.txt  TradeClientApp.h
cfg/: executor.cfg  ordermatch.cfg  tradeclient.cfg
executor/: CMakeLists.txt  ExecutorApp.cpp  ExecutorApp.h
ordermatch/: CMakeLists.txt  Market.cpp  Market.h  OrderMatchApp.cpp  OrderMatchApp.h
src/: Cors.h  RestApi.cpp  RestApi.h  main.cpp
tradeclient/: TradeClientApp.cpp
ui/: package-lock.json
ui/src/: App.css  App.jsx  index.css
